files/L7-features-wave_point_proxy/Traffic_shifting/wavepoint_proxy_purchase_history.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: purchase-history
  annotations:
    istio.io/service-account: purchase-history
spec:
  gatewayClassName: istio-mesh
